portfolio/style.css
* {
  margin: 0%;
  padding: 0%;
  overflow-x: hidden;
}

#loader {
  position: absolute;
  background-image: url("https://cdn.dribbble.com/users/2973561/screenshots/5757826/loading__.gif");
  background-repeat: no-repeat;
  background-size: 50%;
  background-position: center center;
  background-color: rgba(251, 251, 251, 255);
  width: 100vw;
  height: 100vh;
  z-index: 1028;
}

.logo img {
  width: 150px;
  margin: 20px 0px;
  position: fixed;
}

body {
  font-family: "Poppins", sans-serif;
  position: relative;
}

.section-1 {
  height: 100vh;
  background: rgb(255, 255, 255);
  background-size: cover;
  position: relative;
}

.nav {
  display: flex;
  justify-content: space-between;
  position: fixed;
}

.nav-menu {
  margin-left: 1030px;
}
.section-1 ul {
  display: flex;
  margin-right: 20px;
}

li {
  margin: 20px 20px;
  list-style: none;
  color: rgb(231, 41, 27);
  text-align: center;
}

.nav li {
  margin-top: 20px;
}

li a {
  text-decoration: none;
  font-size: 1.3rem;
  color: rgb(231, 41, 27);
  text-align: center;
}

.center-text {
  display: flex;
  height: 60%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: rgb(57, 154, 238);
  text-align: center;
  font-size: 1.7rem;
  margin-top: 100px;
}

.center-text p {
  color: rgba(250, 6, 6, 0.8);
}

.btn {
  display: none;
}

.pic {
  background-image: url("https://media-exp1.licdn.com/dms/image/C5603AQF-23n4FmayAA/profile-displayphoto-shrink_100_100/0/1641417948376?e=1650499200&v=beta&t=sPqhPnKLa7uIw34-L-Gc6znnIInBSQdkwc2Kjy92xUc");
  border-radius: 200px;
  background-repeat: no-repeat;
  background-size: cover;
  border: 2px solid rgb(238, 7, 7);
  width: 100px;
  height: 100px;
}

.arrow {
  position: absolute;
  bottom: 20px;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  font-size: 1.9rem;
  color: rgb(235, 23, 8);
  animation: navimaton 3s infinite ease;
}

.about-section {
  padding: 0px 5px;
  display: flex;
  font-size: 1rem;
  color: rgb(0, 0, 0);
}

.about-container .about {
  font-size: 1.9rem;
  font-weight: 600;
  color: rgb(230, 23, 23);
}

.about-container {
  padding-right: 5px;
  width: 60%;
  margin: 20px 0px;
}

.hobby-container {
  background: url("https://media.istockphoto.com/photos/ghana-accra-kwame-nkrumah-park-picture-id498116341?b=1&k=20&m=498116341&s=170667a&w=0&h=n_E4fSh9YffKJDamDuZc9HuOFuzhGqj1sHzrVmJtKn4=");
  background-position: center center;
  width: 40%;
  margin: 40px 0px 40px 50px;
}

.section-2 {
  background-color: rgb(241, 250, 255);
  padding: 0px 200px;
  display: flex;

  flex-direction: column;
}
.project-section {
  margin-top: 50px;
}

.project-h1 {
  text-align: center;
  color: red;
  margin-bottom: 50px;
}

.project-h1::after,
.project-h1::before {
  display: inline-block;
  content: "";
  border-top: 4px solid rgb(3, 154, 255);
  width: 4rem;
  margin: 0 0.6rem;
  transform: translateY(-0.5rem);
}

.project-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 50px;
}

.project {
  height: 300px;
  border-radius: 10px;
  position: relative;
}
.pro1 {
  background: url("pro.png");
  background-position: center center;
  background-size: cover;
}

.pro2 {
  background: url("pro2.png");
  background-position: center center;
  background-size: cover;
}

.pro3 {
  background: url("weath.jpg");
  background-position: center center;
  background-size: cover;
}

.effect {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.678);
  position: absolute;
  top: 0;
  left: 0;
  transition: all 0.3s ease;
  border-radius: 10px;
}

.project:hover .effect {
  height: 0%;
  transition: all 0.5s ease;
}

.project h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  color: rgb(255, 255, 255);
}

.project:hover.project h1 {
  display: none;
}

/*h1 for skill*/

/*Editing tags  around the skills*/
.displace {
  position: absolute;
  color: rgb(0, 60, 255);
  font-size: 120%;
  opacity: 0.3;
}

.tag {
  top: 260px;
  left: 1800px;
  animation: skillmove 8s ease infinite;
}
.symbols {
  top: 290px;
  left: 1500px;
  font-size: 170%;
  animation: skillmove 6.9s ease infinite;
}

.code {
  top: 270px;
  left: 1200px;
  animation: skillmove 7.6s ease infinite;
}

.script {
  top: 200px;
  left: 1000px;
  animation: skillmove 8.5s ease infinite;
}

.file {
  top: 200px;
  left: 700px;
  animation: skillmove 7.5s ease infinite;
}

.link {
  top: 230px;
  left: 400px;
  animation: skillmove1 7.3s ease infinite;
}

.nodejs {
  top: 280px;
  left: 100px;
  color: rgb(255, 0, 0);
  font-size: 140%;
  animation: skillmove 6.5s ease infinite;
}
/*SECOND TAGS ANIMA*/
.tag1 {
  top: 760px;
  left: 1800px;
  animation: skillmove 8s ease infinite;
}
.symbols1 {
  top: 790px;
  left: 1200px;
  font-size: 170%;
  animation: skillmove 6.9s ease infinite;
}

.code1 {
  top: 770px;
  left: 1500px;
  animation: skillmove 7.6s ease infinite;
}

.script1 {
  top: 700px;
  left: 700px;
  animation: skillmove 8.5s ease infinite;
}

.file1 {
  top: 700px;
  left: 1000px;
  animation: skillmove 7.5s ease infinite;
}

.link1 {
  top: 730px;
  left: 400px;
  animation: skillmove1 7.3s ease infinite;
}

.nodejs1 {
  top: 720px;
  left: 100px;
  color: rgb(255, 0, 0);
  font-size: 140%;
  animation: skillmove 6.5s ease infinite;
}

.section-4 {
  background: url("https://media.istockphoto.com/photos/sticky-note-message-picture-id536855407?b=1&k=20&m=536855407&s=170667a&w=0&h=lZR59sOrMmkYJMoC8A-6O9d_09-C9n-xWN8B_c7aFco=");
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 50px;
}
.contact-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 40rem;
  padding: 50px 0px;
  background-color: rgb(255, 255, 255);
  border-radius: 20px;
  box-shadow: 1px 1px 19px 1px rgba(0, 0, 0, 0.226);
}

.form-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

input {
  width: 35em;
  height: 3rem;
  margin: 10px;
  border-radius: 10px;
  outline: none;
  border: none;
  background-color: rgb(236, 236, 236);
  padding: 0px 10px;
  font-size: 15px;
}

textarea {
  width: 35em;
  height: 8rem;
  margin: 10px;
  border-radius: 10px;
  outline: none;
  border: none;
  background-color: rgb(236, 236, 236);
  padding: 0px 10px;
  font-size: 15px;
}

::placeholder {
  color: rgb(0, 40, 92);
}

button {
  text-align: center;
  width: 9rem;
  height: 3rem;
  border-radius: 15px;
  margin-top: 10px;
  outline: none;
  border: none;
  font-size: 1rem;
  font-weight: bold;
  background-color: rgba(255, 31, 31, 0.794);
  color: white;
}

.h2 {
  margin-top: 30px;
  color: #1381ff;
  font-size: 30px;
  font-weight: bolder;
}

.links-icon {
  font-size: 120%;
}
/* MEDIA QUERY FOR 700PX */
@media screen and (max-width: 700px) {
  #loader {
    background-size: 90%;
  }

  .logo img {
    width: 120px;
    margin-top: 10px;
  }
  .section-1 .nav-ul {
    display: flex;
    height: 100%;
    flex-direction: column;
    margin: auto;
    margin-top: 50px;
  }
  .center-text {
    font-size: 0.7rem;
  }

  .center-text p {
    font-size: 0.9rem;
  }

  .arrow {
    font-size: 1.5rem;
  }

  .nav-menu {
    display: none;
    animation: navimaton 1s ease;
    height: 100vh;
    overflow: hidden;
    margin: auto;
    z-index: 999;
  }

  li {
    margin: 10px 0px;
  }

  .nav-menu a {
    font-size: 3rem;
    font-family: bold;
    margin: 0%;
    z-index: 999;
  }

  .pro1 {
    background: url("pro.png");
    background-position: center center;
    background-size: cover;
  }

  .pro2 {
    background: url("pro2.png");
    background-position: center center;
    background-size: cover;
  }

  .pro3 {
    background: url("weath.jpg");
    background-position: center center;
    background-size: cover;
  }

  .navli {
    animation: navimaton 1s ease;
    font-size: 4rem;
    position: fixed;
    display: block;
    width: 100%;
    padding-right: 70px;
    background-color: #1381ff;
    z-index: 999;
  }

  .btn {
    display: block;
    position: fixed;
    right: 10px;
    top: 10px;
    font-size: 1.7rem;
    color: rgba(250, 6, 6, 0.8);
  }

  /*ICONS ANIMATIONS*/
  .tag {
    top: 160px;
    left: 10px;
    animation: skillmove 8s ease infinite;
  }
  .symbols {
    top: 290px;
    left: 240px;
    font-size: 170%;
    animation: skillmove 6.9s ease infinite;
  }

  .code {
    top: 70px;
    left: 350px;
    animation: skillmove 7.6s ease infinite;
  }

  .script {
    top: 500px;
    left: 100px;
    animation: skillmove 4.5s ease infinite;
  }

  .file {
    top: 400px;
    left: 300px;
    animation: skillmove 7.5s ease infinite;
  }

  .section-2 {
    padding: 0px 5px;
  }

  .about-section {
    display: grid;
    grid-template-rows: 1fr 1fr;
    padding: 10px 0px 0px 0px;
  }

  .about-container {
    width: 100%;
    margin: 0%;
  }

  .hobby-container {
    margin: 0px;
    margin-top: 20px;
    padding: 10px;
    width: 100%;
    height: 300px;
  }

  .project-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 5px;
    padding: 10px;
  }
  .project-section {
    margin-top: 0px;
  }
  .project-h1 {
    margin: 0px;
  }

  .contact-container {
    width: 120%;
  }

  input {
    width: 16rem;
  }

  textarea {
    width: 16rem;
  }
}

@keyframes navimaton {
  0% {
    transform: translatey(-40px);
  }

  100% {
    transform: translatey(0px);
  }
}

@keyframes skillmove {
  0% {
    transform: translatey(0px);
    opacity: 0.5;
    color: #1381ff;
  }

  50% {
    transform: translatey(-40px);
    opacity: 0.5;
    color: #ff2916;
  }

  100% {
    transform: translatey(0px);
    opacity: 0.5;
    color: #1381ff;
  }
}

/* animation two*/

